--- a/backend/package.json
+++ b/backend/package.json
@@ -4,16 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1623.0",
     "axios": "^1.7.0",
     "bullmq": "^5.7.9",
     "express": "^4.19.2",
+    "ioredis": "^5.4.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.7",
+    "pdfjs-dist": "^4.2.67",
     "pg": "^8.11.5",
     "redis": "^4.6.14",
     "sequelize": "^6.37.3",
