--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "aws-sdk": "^2.1623.0",
     "axios": "^1.7.0",
     "bullmq": "^5.7.9",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "ioredis": "^5.4.1",
     "multer": "^1.4.5-lts.1",
