--- a/backend/package.json
+++ b/backend/package.json
@@ -13,11 +13,13 @@
     "aws-sdk": "^2.1623.0",
     "axios": "^1.7.0",
     "bullmq": "^5.7.9",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "ioredis": "^5.4.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.7",
+    "openai": "^4.47.1",
     "pdfjs-dist": "^4.2.67",
     "pg": "^8.11.5",
     "redis": "^4.6.14",
